<resources>
    <string name="app_name">Radio UCAB</string>
    <string name="menu_accion_cerrar_sesion">Cerrar Sesión</string>
    <string name="menu_accion_ver_perfil">Ver mi perfil</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="timeline_empty">Espere un momento por favor...</string>
    <string name="texto_detalle_programa">Espere un momento por favor...</string>
    <string name="menu_perfil_usuario">Ingresar</string>
    <string name="ip_web_service">http://192.168.0.104/radioUCAB/</string>
    <string name="ip_streaming_high">http://31.200.244.181:8110</string>
    <string name="ip_streaming_low">http://31.200.244.181:8110</string>
    <string name="ruta_archivos_radio_ucab">/sdcard/.RadioUCAB/</string>
    <string name="cuenta_twitter">tweetsRadioUCAB</string>
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >¿Qué está pasando hoy?</item>
        <item >Noticias</item>
        <item >Eventos</item>
        <item >Programas</item>
        <item >Perfil</item>
        <item >Configuracion</item>
    </string-array>
    <string name="desc_list_item_icon">Iconos</string>
    <string name="dia_semana_1">Lunes</string>
    <string name="dia_semana_2">Martes</string>
    <string name="dia_semana_3">Miercoles</string>
    <string name="dia_semana_4">Jueves</string>
    <string name="dia_semana_5">Viernes</string>
    <string name="dia_semana_6">Sábado</string>
    <string name="dia_semana_7">Domingo</string>
    <string name="toast_error_debe_estar_logeado">Debe iniciar sesión en la aplicación para almacenar sus programas favoritos</string>
    <string name="campo_texto_sin_noticias">No hay noticias disponibles, intente más tarde</string>
    <string name="campo_encabezado_modulo_noticias">Noticias en Radio UCAB</string>
    <string name="toast_error_terminos_condiciones">Debe aceptar los terminos y condiciones para registrarse en Radio UCAB</string>
    <string name="toast_error_campos_obligatorios">Todos los campos son obligatorios completelos</string>
    <string name="dialogo_asunto_premios">Premios</string>
    <string name="dialogo_encabezado_posicion">Posicion</string>
    <string name="dialogo_encabezado_premios">Premios</string>
    <string name="dialogo_boton_ver_premios">Ver premios</string>
    <string name="dialogo_asunto_informacion">¿Qué está sonando?</string>
    <string name="dialogo_mensaje_informacion">Escuchas</string>
    <string name="dialogo_mensaje_cerrar">CERRAR</string>
    <string name="dialogo_mensaje_Si">SI</string>
    <string name="dialogo_mensaje_No">NO</string>
    <string name="dialogo_mensaje_Ok">OK</string>
    <string name="dialogo_asunto_conectate">¡Conéctate con Radio UCAB!</string>
    <string name="dialogo_mensaje_conectate">Para interactuar con Radio UCAB debes iniciar sesión</string>
    <string name="dialogo_asunto_terminos_condiciones">Términos y Condiciones</string>
    <string name="dialogo_contenido_terminos_condiciones">Términos y condiciones</string>
    <string name="dialogo_asunto_cancelar_registro">Cancelar registro</string>
    <string name="dialogo_contenido_cancelar_registro">¿Está seguro de que desea cancelar su registro?</string>
    <string name="dialogo_asunto_cancelar_edicion">Cancelar edición</string>
    <string name="dialogo_contenido_cancelar_edicion">¿Está seguro de que desea cancelar la edición?</string>
    <string name="dialogo_asunto_cerrar_sesion">Cerrar Sesión</string>
    <string name="dialogo_contenido_cerrar_sesion">¿Está seguro de que desea cerrar su sesión?</string>
    <string name="campo_boton_cancelar">Cancelar</string>
    <string name="campo_boton_guardar">Guardar</string>
    <string name="campo_encabezado_mis_programas">Mis programas favoritos</string>
    <string name="campo_encabezado_mis_noticias">Mis noticias</string>
    <string name="campo_texto_mis_noticias">Selecciona los tipos de noticias de tu preferencia, en base a esto recibirás notificaciones cuando estén disponibles noticias de este tipo</string>
    <string name="campo_texto_sin_mis_noticias">No hay preferencias de noticias disponibles, intente más tarde</string>
    <string name="campo_toast_error_actualizar_mis_noticias">Error al actualizar las preferecias, intentelo más tarde"</string>
    <string name="campo_toast_error_almacenar_mis_noticias">Error al almacenar las preferencias, intentelo más tarde</string>
    <string name="campo_toast_actualizacion">Preferencias actualizadas</string>
    <string name="campo_toast_etiquetas_nuevas">Etiquetas nuevas</string>
    <string name="campo_encabezado_mis_concursos">Mis concursos</string>
    <string name="campo_texto_sin_mis_concursos">Aún no has participado en ningún concurso, está atento a la programación de Radio UCAB para participar en el próximo</string>
    <string name="campo_encabezado_configuración">Configuración</string>
    <string name="campo_encabezado_configuración_uno">Recibir notificaciones de la aplicación </string>
    <string name="campo_encabezado_configuración_dos">Consumir menos datos del streaming (esto disminuirá la calidad del audio) </string>
    <string name="campo_dialogo_almacenar_configuraciones">Almacenando las configuraciones...</string>
    <string name="campo_toast_error_almacenar_configuraciones">Error al almacenar las configuraciones, intentelo más tarde</string>
    <string name="campo_toast_almacenar_configuraciones">Configuración actualizada</string>
    <string name="campo_toast_almacenamiento_en_proceso">Almacenamiento en proceso, intente más tarde</string>
    <string name="campo_encabezado_parrilla">Programación del día</string>
    <string name="campo_encabezado_horario_parrilla">Hora</string>
    <string name="campo_encabezado_programa_parrilla">Programa</string>
    <string name="campo_encabezado_actualizacion_del_dia">Parrilla del día:</string>
    <string name="campo_error_sin_programa_actual">No tenemos información disponible del programa actual</string>
    <string name="campo_encabezado_eventos">Próximos eventos</string>
    <string name="campo_encabezado_eventos_horarios">Horarios:</string>
    <string name="campo_encabezado_eventos_descripcion">Descripción del evento:</string>
    <string name="campo_encabezado_eventos_direccion">Dirección del evento:</string>
    <string name="campo_texto_sin_eventos">No hay eventos disponibles, intente más tarde</string>
    <string name="campo_encabezado_programas">Programas de Radio UCAB</string>
    <string name="campo_encabezado_programas_horarios">Horarios del programa</string>
    <string name="campo_encabezado_programas_tipo">Tipo de programa:</string>
    <string name="campo_encabezado_programas_locutores">Comunicate con los locutores</string>
    <string name="campo_texto_sin_programas">No hay programas disponibles, intente más tarde</string>
    <string name="campo_toast_error_actualizar_programas">Error al actualizar los programas, intentelo más tarde</string>
    <string name="campo_toast_error_actualizar_programas_favoritos">Error al almacenar los programas favoritos, intentelo más tarde</string>
    <string name="campo_toast_programas_nuevos">Programas nuevos</string>
    <string name="campo_toast_programas_actualizados">Programas actualizados</string>
    <string name="campo_dialogo_actualizando_programa">Comprobando si hay actualizaciones disponibles...</string>
    <string name="campo_dialogo_cargando_programas">Cargando los programas...</string>
    <string name="campo_encabezado_inicio_sesion">Iniciar sesión</string>
    <string name="campo_texto_inicio_sesion_uno">Inicia sesión para comenzar a disfrutar de todo lo que Radio UCAB trae para ti: interacción con lo que escuchas, concursos, solicitudes de canciones y mucho más.</string>
    <string name="campo_texto_inicio_sesion_dos">Si estás o no registrado, presiona inicio de sesión y en unos pocos pasos comienza la experiencia Radio UCAB</string>
    <string name="campo_encabezado_editar_perfil">Editar Perfil</string>
    <string name="campo_boton_crear_usuario">Crear Usuario</string>
    <string name="campo_terminos_condiciones">He leído los terminos y condiciones</string>
    <string name="campo_encabezado_registro">Registro de Usuario</string>
    <string name="campo_texto_resgistro_usuario">Ya falta poco para que te unas a Radio UCAB, pero antes necesitamos los siguientes datos para completar tu registro:</string>
    <string name="hint_campo_nombre">Nombre</string>
    <string name="hint_campo_apellido">Apellido</string>
    <string name="hint_campo_correo">Correo Electrónico</string>
    <string name="campo_usuario_twitter">Usuario Twitter</string>
    <string name="campo_usuario_correo">Correo Electrónico</string>
    <string name="campo_boton_editar_perfil">Editar perfil</string>
    <string name="campo_texto_informacion_personal">Información Personal</string>
    <string name="campo_texto_tu_radio_ucab">Tú + Radio UCAB</string>
    <string name="campo_texto_mis_premios">Mis concursos</string>
    <string name="campo_texto_mis_programas_favoritos">Mis programas favoritos</string>
    <string name="campo_texto_mis_preferencia_noticias">Mis noticias</string>
    <string name="campo_header_dialogo">Interactúa con nosotros</string>
    <string name="campo_texto_solicitar_cancion">Solicitar canción</string>
    <string name="campo_texto_comentario">Comentario</string>
    <string name="campo_texto_dedicar_cancion">Dedicar canción</string>
    <string name="campo_texto_concurso">Verificar concursos disponibles</string>
    <string name="campo_texto_programa">Participar en el programa actual</string>
    <string name="campo_boton_cerrar">Cerrar</string>
    <string name="dialogo_asunto_interaccion_exitoso">Tu tweet lucirá de la siguiente forma</string>
    <string name="dialogo_contenido_interaccion_exitoso_comentario">Tweet publicado exitosamente</string>
    <string name="dialogo_contenido_interaccion_exitoso_solicitud">Canción solicitada exitosamente, recibirás una notificación de ser seleccionada entre las más pedidas</string>
    <string name="dialogo_contenido_interaccion_exitoso_dedicatoria">Canción dedicada exitosamente, recibirás una notificación cuando vaya a ser reproducida</string>
    <string name="dialogo_contenido_interaccion_exitoso_programa">Comentario enviado exitosamente al programa</string>
    <string name="dialogo_contenido_interaccion_no_exitoso">No se ha podido procesar su solicitud, intente nuevamente</string>
    <string name="dialogo_asunto_error">Error</string>
    <string name="dialogo_contenido_interaccion_no_exitoso_tweet">Ups Twitter, no  pudo procesar la publicación de tu comentario. Recuerda que no puedes twitear dos comentarios exactamente iguales</string>
    <string name="campo_encabezado_editar_tweet_comentario">Enviar comentario</string>
    <string name="campo_texto_tweet_comentario">Completa los siguientes campos para generar tu tweet:</string>
    <string name="campo_encabezado_finalidad_comentario">Finalidad:</string>
    <string name="campo_encabezado_comentario">Comentario:</string>
    <string name="campo_radio_button_finalidad_comentario">Comentario</string>
    <string name="campo_radio_button_finalidad_sugerencia">Sugerencia</string>
    <string name="hint_campo_tweet_comentario">Escriba acá su comentario</string>
    <string name="campo_encabezado_concurso">Concursos actuales</string>
    <string name="campo_boton_siguiente">Siguiente</string>
    <string name="campo_texto_con_concursos">Puedes participar en los siguientes concursos, recuerda que hay un límite de comentarios establecidos por día.</string>
    <string name="campo_texto_sin_concursos">No hay concursos en este momento, está atento a nuestra programación para conocer cuando será el próximo.</string>
</resources>