<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/creacion_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.androidhive.radioucab.Controlador.RegistroUsuarioFragment">

    <TextView
        android:id="@+id/texto_encabezado_editar_tweet_comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/campo_encabezado_editar_tweet_comentario"
        android:textColor="@color/azul_ucab"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/texto_descripcion_comentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/texto_encabezado_editar_tweet_comentario"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/campo_texto_tweet_comentario"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/texto_encabezado_finalidad_comentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/texto_descripcion_comentario"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="25dp"
        android:text="@string/campo_encabezado_finalidad_comentario"
        android:textColor="@color/azul_radio_ucab"
        android:textSize="16dp" />

    <LinearLayout
        android:id="@+id/layout_radio_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/texto_encabezado_finalidad_comentario"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radio_finalidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/campo_radio_button_finalidad_comentario" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/campo_radio_button_finalidad_sugerencia" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/campo_radio_button_finalidad_duda" />
            </LinearLayout>
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/texto_encabezado_comentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_radio_buttons"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/campo_encabezado_comentario"
        android:textColor="@color/azul_radio_ucab"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/editText_tweet_comentario"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="100dp"
        android:layout_below="@id/texto_encabezado_comentario"
        android:hint="@string/hint_campo_tweet_comentario"
        android:background="@drawable/borde_text_area"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/editText_tweet_comentario"
        android:gravity="center|right"
        android:background="@color/blanco"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boton_cerrar_interaccion"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/boton_azul_claro"
            android:text="@string/campo_boton_siguiente"
            android:textColor="@color/blanco"
            android:gravity="center"
            android:textSize="15dp" />
    </LinearLayout>

</RelativeLayout>
