<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/texto_encabezado_inicio_sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/campo_encabezado_inicio_sesion"
        android:textColor="@color/azul_ucab"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/campo_texto_inicio_sesion_uno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/texto_encabezado_inicio_sesion"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/campo_texto_inicio_sesion_uno"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/campo_texto_inicio_sesion_dos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/campo_texto_inicio_sesion_uno"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/campo_texto_inicio_sesion_dos"
        android:textColor="@color/azul_ucab"
        android:textSize="16sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"/>


    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/campo_texto_inicio_sesion_dos"/>

</RelativeLayout>