<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/campo_encabezado_modulo_parrilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/campo_encabezado_parrilla"
        android:textColor="@color/azul_radio_ucab"
        android:textSize="20sp" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lower_linear_layout"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/campo_encabezado_modulo_parrilla"
        android:orientation="horizontal">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="130dip"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/relative_layout_hora">

            <TextView
                android:id="@+id/campo_encabezado_horario_parrilla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/campo_encabezado_horario_parrilla"
                android:textColor="@color/azul_radio_ucab"
                android:textSize="16sp" />

            <ListView
                android:id="@+id/lista_hora"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="#00000000"
                android:layout_below="@id/campo_encabezado_horario_parrilla"
                android:scrollbars="vertical" />
        </RelativeLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/relative_layout_programa">

            <TextView
                android:id="@+id/campo_encabezado_programa_parrilla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/campo_encabezado_programa_parrilla"
                android:textColor="@color/azul_radio_ucab"
                android:textSize="16sp" />

            <ListView
                android:id="@+id/lista_programa"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="#00000000"
                android:layout_below="@id/campo_encabezado_programa_parrilla"
                android:scrollbars="vertical"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>